0.9.2
------

 - Added requests cache

0.9.1
------

 - Updated version in requirements and setup keywords
 - Removed --use-mirrors for 3.5 support

0.9.0
------

- Bugfix: Fixed comparison of duplicate URLs when crawling

0.8.11
------

 - Bugfix: Improper check of domain when being restrictive

0.8.10
------

 - Strip '/' from end of urls when crawling

0.8.9
------

 - Added argument for cache link size & fixed up others

0.8.8
------

 - Updated README and setup

0.8.7
------

 - added CSV as a format

0.8.6
------

 - added environ variable SCRAPE_DISABLE_IMGS to not save images

0.8.5
------

 - warn user that saving images during crawling is slow

0.8.4
------

 - moved print_text() from crawl.py back to scrape.py

0.8.3
------

 - fixed bad formatting in readme usage

0.8.2
------

 - ignore-load-errors removed from wkhtmltopdf executable

0.8.1
------

 - removed extra schema adding

0.8.0
------

 - fixed bug where added url schema not reflected in query

0.7.9
------

 - moved file crawling to new file
 - avoid overwrite prompt in tests

0.7.8
------

 - updated program description
 - removed overwriting test due to issues with it

0.7.7
------

 - no longer defaults to overwriting files, added program flags/a prompt
 - adding renaming mechanism if choosing to not overwrite a file
 - some function reorganizing

0.7.6
------

 - added print text to stdout option
 - removed extra newline appended in re_filter
 - wrapped pdfkit import in try/except as it isnt essential

0.7.5
------

 - removed extra urlparse import

0.7.4
------

 - added option to not save images
 - images are now only saved if saving to HTML or PDF
 - checks if outfilename has extension before adding new one
 - fixed domains being sometimes mismatched to urls
 - fixed extension being unnecessary appended to urls (for the most part)

0.7.3
------

 - development status reverted to beta

0.7.2
------

 - now saves images with PART.html files (but not css yet)